--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   ],
   "dependencies": {
     "lodash": "^4.17.11",
-    "query-string": "^6.1.0",
-    "request": "^2.88.0"
+    "query-string": "^6.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
